--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^15.2.0",
+    "@react-native-firebase/auth": "^15.2.0",
+    "@react-native-firebase/database": "^15.2.0",
     "@react-navigation/bottom-tabs": "^6.3.2",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/native": "^6.0.11",
@@ -17,6 +20,7 @@
     "formik": "^2.2.9",
     "react": "17.0.2",
     "react-native": "0.68.0",
+    "react-native-flash-message": "^0.2.1",
     "react-native-gesture-handler": "^2.5.0",
     "react-native-reanimated": "^2.9.1",
     "react-native-safe-area-context": "^4.3.1",
